--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,9 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
 }
+h1 {
+  color: #F50000;
+}
 #buttons button {
   display: block;
   padding: 1em;
@@ -9,6 +12,10 @@ body {
   font-size: 1.2em;
   width: 250px;
   cursor: pointer;
+  color: #00D;
+}
+button.hover {
+  filter: brightness(50%);
 }
 #score span {
   margin: 0 2em;
